--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "recharts": "^3.4.1",
     "react-markdown": "^10.1.0",
     "react-dom": "^19.2.0",
-    "react": "^19.2.0",
-    "uuid": "^13.0.0"
+    "react": "^19.2.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
